[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]
[ext_resource path="res://NextShapePanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://obj/Black_bg.png" type="Texture" id=3]
[ext_resource path="res://PointsPanel.tscn" type="PackedScene" id=4]

[node name="GUI" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -10.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1023.0
margin_bottom = 813.0
alignment = 2

[node name="PointsPanel" parent="HBoxContainer" instance=ExtResource( 4 )]
position = Vector2( 10, 200 )

[node name="NextShapePanel" parent="HBoxContainer" instance=ExtResource( 2 )]
position = Vector2( 10, 600 )

[node name="Left" type="CenterContainer" parent="HBoxContainer"]
margin_bottom = 806.0

[node name="Right" type="CenterContainer" parent="HBoxContainer"]
margin_left = 4.0
margin_right = 1016.0
margin_bottom = 806.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OuterGrid" type="GridContainer" parent="HBoxContainer/Right"]
margin_left = 481.0
margin_top = 378.0
margin_right = 530.0
margin_bottom = 427.0
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 16

[node name="Cell" type="TextureRect" parent="HBoxContainer/Right/OuterGrid"]
margin_right = 49.0
margin_bottom = 49.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
